--- a/index.html
+++ b/index.html
@@ -236,12 +236,31 @@
             <p>5 out of 5 stars from 123 reviews from our users</p>
             </div>
 
-            <div class="rating-section">
+            <div class="rating-section last">
               <img src="assets/img/rating-section-icon.svg">
               <p>Repurpose analytics with the possibility to come up.</p>
               </div>
 
         </div>
+
+        </div>
+
+        <div class="contact-us-section">
+
+          <div class="contact-us-section-text">
+            <h4>1% OF THE INDUSTRY</h4>
+            <h2>Welcome to your new digital reality that will rock your world.</h2>
+          </div>
+
+          <div class="btns">
+            <a class="email-btn" href="#">Your e-mail...</a>
+            <a class="submit-btn" href="#">Submit</a>
+
+          </div>
+
+        </div>
+
+        <div class="footer">
 
         </div>
       
